# demining_challenge_solution

./: README.md  yolo-mmdet-baseline-submission.ipynb
dino_train/: README.md  csv_to_coco_drop_background.py  dino_config_flat.py
rtmdet_train/: README.MD  convert_to_coco.py  pyproject.toml  rtmdet_tiny_1xb4_20e.py
